testdata/baselines/reference/submodule/conformance/computedPropertyNames48_ES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
computedPropertyNames48_ES6.ts(16,6): error TS2873: This kind of expression is always falsy.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== computedPropertyNames48_ES6.ts (1 errors) ====
    declare function extractIndexer<T>(p: { [n: number]: T }): T;
    
    enum E { x }
    
    var a: any;
    
    extractIndexer({
        [a]: ""
    }); // Should return string
    
    extractIndexer({
        [E.x]: ""
    }); // Should return string
    
    extractIndexer({
        ["" || 0]: ""
         ~~
!!! error TS2873: This kind of expression is always falsy.
    }); // Should return any (widened form of undefined)